--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "parcel index.html"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
 }
