--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "parcel": "^1.12.4"
   },
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
