--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "mysql": "^2.18.1",
-    "parcel": "^1.12.4",
+    "parcel": "^2.8.3",
     "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
+    "buffer": "^5.5.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
